--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Interview Practice</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="frontend-interview-practice-1/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <script defer src="index.js"></script>
+  <script defer src="frontend-interview-practice-1/index.js"></script>
   <style>
     .attribution {
       font-size: 11px;
